# alarmpi

./: .gitignore  README.md  create_demo.py  main.py  play_alarm.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  stop.sh  style.qss
.github/workflows/: deploy.yml  python-publish.yml
configs/: README.md  default.yaml
src/: GUIWidgets.py  alarm_builder.py  apconfig.py  clock.py  rpi_utils.py  style.qss  utils.py
src/alarmpi/: cli.py
src/alarmpi/core/: GUIWidgets.py  alarm_builder.py  apconfig.py  aptts.py  clock.py
src/alarmpi/handlers/: get_bbc_news.py  get_dht22_readings.py  get_festival_tts.py  get_gcp_tts.py  get_google_translate_tts.py  get_greeting.py  get_next_trains.py  get_weather.py
src/alarmpi/plugins/: dht22.py  trains.py  weather.py
src/alarmpi/utils/: utils.py
src/handlers/: get_gcp_tts.py  get_greeting.py  get_next_trains.py
src/plugins/: dht22.py  trains.py  weather.py
src/utils/: debug_write.py  utils.py
tests/: test_GUIWidgets.py  test_alarm.yaml  test_alarm_builder.py  test_apconfig.py  test_clock.py  test_handlers.py  test_rpi_utils.py
tools/: create_demo.py  play_alarm.py
